.metadata/.plugins/org.eclipse.cdt.ui/Exam-2022WiSe.build.log
17:00:23 **** Rebuild of configuration Debug for project Exam-2022WiSe ****
Info: Internal Builder is used for build
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "myCode\\Account.o" "..\\myCode\\Account.cpp" 
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "myCode\\tests.o" "..\\myCode\\tests.cpp" 
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "myCode\\Customer.o" "..\\myCode\\Customer.cpp" 
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "myCode\\SavingsAccount.o" "..\\myCode\\SavingsAccount.cpp" 
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "myCode\\main.o" "..\\myCode\\main.cpp" 
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "myCode\\CurrentAccount.o" "..\\myCode\\CurrentAccount.cpp" 
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -o "myCode\\Bank.o" "..\\myCode\\Bank.cpp" 
..\myCode\Bank.cpp: In member function 'Customer* Bank::createCustomer()':
..\myCode\Bank.cpp:5:1: warning: no return statement in function returning non-void [-Wreturn-type]
    5 | }
      | ^
..\myCode\Bank.cpp: At global scope:
..\myCode\Bank.cpp:7:44: error: 'id' has incomplete type
    7 | Customer* Bank::lookupCustomer(std::string id) const {
      |                                ~~~~~~~~~~~~^~
In file included from C:/Program Files/GIT/eclipse/mingw/mingw64/include/c++/13.2.0/iosfwd:41,
                 from C:/Program Files/GIT/eclipse/mingw/mingw64/include/c++/13.2.0/bits/shared_ptr.h:52,
                 from C:/Program Files/GIT/eclipse/mingw/mingw64/include/c++/13.2.0/memory:80,
                 from ..\myCode\Bank.h:11,
                 from ..\myCode\Bank.cpp:1:
C:/Program Files/GIT/eclipse/mingw/mingw64/include/c++/13.2.0/bits/stringfwd.h:72:11: note: declaration of 'std::string' {aka 'class std::__cxx11::basic_string<char>'}
   72 |     class basic_string;
      |           ^~~~~~~~~~~~
..\myCode\Bank.cpp: In member function 'Customer* Bank::lookupCustomer(std::string) const':
..\myCode\Bank.cpp:8:1: warning: no return statement in function returning non-void [-Wreturn-type]
    8 | }
      | ^
..\myCode\Bank.cpp: In member function 'std::vector<Customer*> Bank::allCustomers() const':
..\myCode\Bank.cpp:11:1: warning: no return statement in function returning non-void [-Wreturn-type]
   11 | }
      | ^

17:00:41 Build Failed. 1 errors, 3 warnings. (took 17s.980ms)

